Manual modification to get return types
