# api/stargate_document_v2/src/main/kotlin/com/datastax/astra/stargate_document_v2/models/Datacenter.kt
@@ -1,0 +1,31 @@
+/**
+* Stargate Document API reference
+* The Stargate Document API provides CRUD operations on document data managed by Stargate.
+*
+* The version of the OpenAPI document: 2.0.0
+* 
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package com.datastax.astra.stargate_document_v2.models
+
+
+import com.google.gson.annotations.SerializedName
+
+/**
+ * 
+ * @param name The name of the datacenter.
+ * @param replicas The number of replicas in the datacenter. In other words, the number of copies of each row in the datacenter.
+ */
+
+data class Datacenter (
+    /* The name of the datacenter. */
+    @SerializedName("name")
+    val name: kotlin.String,
+    /* The number of replicas in the datacenter. In other words, the number of copies of each row in the datacenter. */
+    @SerializedName("replicas")
+    val replicas: kotlin.Int
+)
+
