# api/stargate_document_v2/src/main/kotlin/com/datastax/astra/stargate_document_v2/models/DocCollection.kt
@@ -1,0 +1,44 @@
+/**
+* Stargate Document API reference
+* The Stargate Document API provides CRUD operations on document data managed by Stargate.
+*
+* The version of the OpenAPI document: 2.0.0
+* 
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package com.datastax.astra.stargate_document_v2.models
+
+
+import com.google.gson.annotations.SerializedName
+
+/**
+ * 
+ * @param name The name of the collection.
+ * @param upgradeAvailable Whether an upgrade is available. Use the 'upgrade a collection' endpoint with the upgrade type to perform upgrade.
+ * @param upgradeType The upgrade type, if an upgrade is available.
+ */
+
+data class DocCollection (
+    /* The name of the collection. */
+    @SerializedName("name")
+    val name: kotlin.String,
+    /* Whether an upgrade is available. Use the 'upgrade a collection' endpoint with the upgrade type to perform upgrade. */
+    @SerializedName("upgradeAvailable")
+    val upgradeAvailable: kotlin.Boolean? = null,
+    /* The upgrade type, if an upgrade is available. */
+    @SerializedName("upgradeType")
+    val upgradeType: DocCollection.UpgradeType? = null
+) {
+
+    /**
+     * The upgrade type, if an upgrade is available.
+     * Values: SAI_INDEX_UPGRADE
+     */
+    enum class UpgradeType(val value: kotlin.String) {
+        @SerializedName(value = "SAI_INDEX_UPGRADE") SAI_INDEX_UPGRADE("SAI_INDEX_UPGRADE");
+    }
+}
+
