# api/stargate_document_v2/src/main/kotlin/com/datastax/astra/stargate_document_v2/models/DocumentResponseWrapper.kt
@@ -1,0 +1,39 @@
+/**
+* Stargate Document API reference
+* The Stargate Document API provides CRUD operations on document data managed by Stargate.
+*
+* The version of the OpenAPI document: 2.0.0
+* 
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package com.datastax.astra.stargate_document_v2.models
+
+import com.datastax.astra.stargate_document_v2.models.ExecutionProfile
+
+import com.google.gson.annotations.SerializedName
+
+/**
+ * 
+ * @param documentId The id of the document
+ * @param pageState A string representing the paging state to be used on future paging requests.
+ * @param data The data returned by the request
+ * @param profile 
+ */
+
+data class DocumentResponseWrapper (
+    /* The id of the document */
+    @SerializedName("documentId")
+    val documentId: kotlin.String? = null,
+    /* A string representing the paging state to be used on future paging requests. */
+    @SerializedName("pageState")
+    val pageState: kotlin.String? = null,
+    /* The data returned by the request */
+    @SerializedName("data")
+    val data: kotlin.Any? = null,
+    @SerializedName("profile")
+    val profile: ExecutionProfile? = null
+)
+
