# api/stargate_document_v2/src/main/kotlin/com/datastax/astra/stargate_document_v2/models/ExecutionProfile.kt
@@ -1,0 +1,36 @@
+/**
+* Stargate Document API reference
+* The Stargate Document API provides CRUD operations on document data managed by Stargate.
+*
+* The version of the OpenAPI document: 2.0.0
+* 
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package com.datastax.astra.stargate_document_v2.models
+
+import com.datastax.astra.stargate_document_v2.models.QueryInfo
+
+import com.google.gson.annotations.SerializedName
+
+/**
+ * 
+ * @param description Brief information about this execution step
+ * @param queries A set of CQL queries performed under this execution step
+ * @param nested Nested execution steps
+ */
+
+data class ExecutionProfile (
+    /* Brief information about this execution step */
+    @SerializedName("description")
+    val description: kotlin.String? = null,
+    /* A set of CQL queries performed under this execution step */
+    @SerializedName("queries")
+    val queries: kotlin.collections.List<QueryInfo>? = null,
+    /* Nested execution steps */
+    @SerializedName("nested")
+    val nested: kotlin.collections.List<ExecutionProfile>? = null
+)
+
