# api/stargate_document_v2/src/main/kotlin/com/datastax/astra/stargate_document_v2/models/InlineResponse200.kt
@@ -1,0 +1,27 @@
+/**
+* Stargate Document API reference
+* The Stargate Document API provides CRUD operations on document data managed by Stargate.
+*
+* The version of the OpenAPI document: 2.0.0
+* 
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package com.datastax.astra.stargate_document_v2.models
+
+import com.datastax.astra.stargate_document_v2.models.DocCollection
+
+import com.google.gson.annotations.SerializedName
+
+/**
+ * 
+ * @param data 
+ */
+
+data class InlineResponse200 (
+    @SerializedName("data")
+    val data: kotlin.collections.List<DocCollection>? = null
+)
+
