# api/stargate_document_v2/src/main/kotlin/com/datastax/astra/stargate_document_v2/models/QueryInfo.kt
@@ -1,0 +1,35 @@
+/**
+* Stargate Document API reference
+* The Stargate Document API provides CRUD operations on document data managed by Stargate.
+*
+* The version of the OpenAPI document: 2.0.0
+* 
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package com.datastax.astra.stargate_document_v2.models
+
+
+import com.google.gson.annotations.SerializedName
+
+/**
+ * 
+ * @param cql CQL query text
+ * @param executionCount The number of times this query was executed
+ * @param rowCount The total number of rows fetched by this query
+ */
+
+data class QueryInfo (
+    /* CQL query text */
+    @SerializedName("cql")
+    val cql: kotlin.String? = null,
+    /* The number of times this query was executed */
+    @SerializedName("executionCount")
+    val executionCount: kotlin.Int? = null,
+    /* The total number of rows fetched by this query */
+    @SerializedName("rowCount")
+    val rowCount: kotlin.Int? = null
+)
+
